@@ -1,0 +1,2 @@
+name="Toggle Systray"
+order=1
