@@ -58,6 +58,9 @@
         "group/settings",
         "custom/cliphist",
         "idle_inhibitor",
+        // START TRAY TOOGLE
+        "tray",
+        // END TRAY TOOGLE
         "custom/exit",
         "clock"
     ]
