@@ -408,7 +408,7 @@ window#waybar.empty #window {
  * ----------------------------------------------------- */
 
 #tray {
-    background-color: #2980b9;
+    padding: 0px 15px 0px 0px;
 }
 
 #tray > .passive {
@@ -417,7 +417,6 @@ window#waybar.empty #window {
 
 #tray > .needs-attention {
     -gtk-icon-effect: highlight;
-    background-color: #eb4d4b;
 }
 
 /* -----------------------------------------------------
