@@ -15,6 +15,7 @@ Hyprland:
 - Wallpaper selector now with preview thumbnails
 - Settings script reworked completely. Implementation of custom modules are now possible. 
 - Waybar settings module to edit some ML4W waybar themes settings on the fly
+- Waybar with Systray (can be hidden in settings script)
 - SDDM settings module to update the SDDM background with current wallpaper
 - All image formats are now supported for setting a wallpaper (jpg,jpeg,png,...)
 
